Unsuccessful debug.  Images not displaying.

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ footer {
 /* ----------------
 Projects / Research
 ---------------- */
-#m86 {
+/* #m86 {
     position:relative;
     height:281px;
     width:450px;
@@ -69,4 +69,4 @@ Projects / Research
 }
 #m86_onclick {
     cursor:pointer;
-}
+} */
