--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,21 @@ html {
     box-sizing: inherit;
 }
 body {
-    font-family: "Times New Roman", Times, serif;
+    font-family: "Encode Sans Condensed", sans-serif;
     margin: 0;
-}
-section {
-    margin: 4% 1% 1% 1%;
+    font-size: 16px;
+    letter-spacing: 0.07rem;
 }
 img {
     width: 100%;
     border: 1px solid #ddd;
     padding: 5px;
+}
+h1, h2 {
+    color: rgb(40, 110, 160);
+}
+p {
+    margin: 2%;
 }
 
 /* -----
@@ -46,6 +51,14 @@ Wrappers
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1%;
 }
+.center-justify {
+    text-align: justify;
+    text-align-last: center;
+}
+.title-pad {
+    margin: 0;
+    padding: 1.5rem;
+}
 /* ?? */
 .grid-item-txt {
     padding: 1%;
@@ -59,8 +72,6 @@ Wrappers
 Header and Footer
 -------------- */
 header {
-    background: url("../images/header.svg") no-repeat;
-    background-size: cover;
     padding-bottom: 10%;
 }
 .head-container {
@@ -75,14 +86,17 @@ footer {
 Navigation
 ------- */
 nav {
+    background: url("../images/header.svg") no-repeat;
+    background-size: cover;
+    margin-top: 2em;
     padding: 1.5em 0.5em;
     text-align: center;
 }
 nav a {
     color: #FFF;
     text-decoration: none;
-    margin: 0px 10px;
-    padding: 10px 10px;
+    margin: 0 1em;
+    padding: 0.5em 0.5em;
     position: relative;
     z-index: 0;
     cursor: pointer;
