--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@ html {
 body {
     font-family: "Encode Sans Condensed", sans-serif;
     margin: 0;
-    font-size: 16px;
-    letter-spacing: 0.07rem;
+    font-size: 18px;
 }
 img {
     width: 100%;
@@ -20,9 +19,13 @@ img {
 }
 h1, h2 {
     color: rgb(40, 110, 160);
+    padding: 3% 0 0 0;
 }
 p {
     margin: 2%;
+    font-size: 1.1rem;
+    letter-spacing: 0.07rem;
+    line-height: 2rem;
 }
 
 /* -----
@@ -74,12 +77,10 @@ Header and Footer
 header {
     padding-bottom: 10%;
 }
-.head-container {
-    text-align: center;
-}
 footer {
-    background-color:rgb(40, 110, 160);
     margin: 0;
+    background-color:rgb(40, 110, 160);
+    color: #FFF;
 }
 
 /* -------
