--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,17 @@ img {
 }
 h1, h2 {
     color: rgb(40, 110, 160);
-    padding: 3% 0 0 0;
+    margin: 0;
+    padding: 1.5%;
 }
 p {
     margin: 2%;
     font-size: 1.1rem;
     letter-spacing: 0.07rem;
     line-height: 2rem;
+}
+hr {
+    border-color: rgb(40, 110, 160);
 }
 
 /* -----
@@ -62,6 +66,15 @@ Wrappers
     margin: 0;
     padding: 1.5rem;
 }
+.washout-back {
+    background: #FFF;
+    opacity: 0.5;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 2%;
+}
 /* ?? */
 .grid-item-txt {
     padding: 1%;
@@ -75,29 +88,41 @@ Wrappers
 Header and Footer
 -------------- */
 header {
-    padding-bottom: 10%;
+    background: url(../images/m86_rg2.jpg);
+    background-position: center;
+    /* background-repeat: no-repeat; */
+    height: 50vh;
+    position: relative;
 }
 footer {
     margin: 0;
     background-color:rgb(40, 110, 160);
     color: #FFF;
 }
+footer p {
+    margin: 2%;
+    font-size: 0.9rem;
+    letter-spacing: 0.07rem;
+    line-height: 1.5rem;
+}
 
 /* -------
 Navigation
 ------- */
 nav {
-    background: url("../images/header.svg") no-repeat;
-    background-size: cover;
-    margin-top: 2em;
-    padding: 1.5em 0.5em;
+    background: rgb(40, 110, 160);
+    margin-top: 2rem;
+    padding: 1.5rem 0.5rem;
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 nav a {
     color: #FFF;
     text-decoration: none;
-    margin: 0 1em;
-    padding: 0.5em 0.5em;
+    margin: 0 1rem;
+    padding: 0.5rem 0.5rem;
     position: relative;
     z-index: 0;
     cursor: pointer;
