--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,11 @@ Wrappers
     opacity: 0.5;
     display: inline-block;
     position: absolute;
+    padding: 2%;
+    /* Center alignment */
     top: 50%;
     left: 50%;
-    padding: 2%;
+    transform: translateY(-50%) translateX(-50%);
 }
 /* ?? */
 .grid-item-txt {
@@ -88,11 +90,13 @@ Wrappers
 Header and Footer
 -------------- */
 header {
+    position: relative;
+}
+.header-back {
     background: url(../images/m86_rg2.jpg);
     background-position: center;
     /* background-repeat: no-repeat; */
     height: 50vh;
-    position: relative;
 }
 footer {
     margin: 0;
@@ -103,7 +107,7 @@ footer p {
     margin: 2%;
     font-size: 0.9rem;
     letter-spacing: 0.07rem;
-    line-height: 1.5rem;
+    line-height: 1.2rem;
 }
 
 /* -------
@@ -111,12 +115,8 @@ Navigation
 ------- */
 nav {
     background: rgb(40, 110, 160);
-    margin-top: 2rem;
     padding: 1.5rem 0.5rem;
     text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
 }
 nav a {
     color: #FFF;
