--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@ body {
     margin: 0;
     font-size: 18px;
 }
-img {
-    width: 100%;
-    border: 1px solid #ddd;
-    padding: 5px;
-}
+/* Text */
 h1, h2 {
     color: rgb(40, 110, 160);
+    margin: 0;
+    padding: 1.5%;
+}
+h3, h4, h5, h6 {
     margin: 0;
     padding: 1.5%;
 }
@@ -31,61 +31,11 @@ p {
 hr {
     border-color: rgb(40, 110, 160);
 }
-
-/* -----
-Wrappers
------ */
-.content-wrap {
+/* Images */
+img {
     width: 100%;
-    margin: 0 auto;
-    padding: 1%;
-    overflow: hidden;
-}
-.flex {
-    display: flex;
-}
-.col-narrow {
-    width: 30%;
-    float: left;
-}
-.col-wide {
-    width: 70%;
-    float: left;
-    padding-left: 3%;
-}
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 1%;
-}
-.center-justify {
-    text-align: justify;
-    text-align-last: center;
-    opacity: 0.9;
-}
-.title-pad {
-    margin: 0;
-    padding: 1.5rem;
-}
-.washout-back {
-    background: #FFF;
-    opacity: 0.5;
-    display: inline-block;
-    position: absolute;
-    padding: 2%;
-    /* Center alignment */
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
-}
-/* ?? */
-.grid-item-txt {
-    padding: 1%;
-    text-align: center;
-}
-.grid-item-img {
-    display: relative;
-    margin: auto;
+    border: 1px solid #ddd;
+    padding: 5px;
 }
 
 /* --------------
@@ -100,6 +50,17 @@ header {
     /* background-repeat: no-repeat; */
     height: 50vh;
 }
+.washout-back {
+    background: #FFF;
+    opacity: 0.5;
+    display: inline-block;
+    position: absolute;
+    padding: 2%;
+    /* Center alignment */
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+}
 footer {
     margin: 0;
     background-color:rgb(40, 110, 160);
@@ -110,6 +71,50 @@ footer p {
     font-size: 0.9rem;
     letter-spacing: 0.07rem;
     line-height: 1.2rem;
+}
+
+/* -----
+Wrappers
+----- */
+.content-wrap {
+    width: 100%;
+    margin: 0 auto;
+    padding: 1%;
+    overflow: hidden;
+}
+/* .flex {
+    display: flex;
+} */
+/* .col-narrow {
+    width: 30%;
+    float: left;
+}
+.col-wide {
+    width: 70%;
+    float: left;
+    padding-left: 3%;
+} */
+/* Text alignment */
+.center {
+    text-align: center;
+}
+.center-justify {
+    text-align: justify;
+    text-align-last: center;
+}
+/* Grids */
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1%;
+}
+.grid-item-txt {
+    padding: 1%;
+    text-align: center;
+}
+.grid-item-img {
+    display: relative;
+    margin: auto;
 }
 
 /* -------
@@ -155,9 +160,9 @@ Projects / Research
 /* NGC 4921 */
 .zoom:hover {
     transition: transform 0.2s;
-    -ms-transform: scale(1.3); /* IE 9 */
-    -webkit-transform: scale(1.3); /* Safari 3-8 */
-    transform: scale(1.3); /* Rest */
+    -ms-transform: scale(1.2); /* IE 9 */
+    -webkit-transform: scale(1.2); /* Safari 3-8 */
+    transform: scale(1.2); /* Rest */
 }
 /* NGC 4921 modal box (fullscreen image pop) */
 #modal {
@@ -171,7 +176,7 @@ Projects / Research
     height: 100vh;
     width: 100vw;
     background-color: black;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 .modal-content {
     position: relative;
