In research, divided modal page by projects (pass value of modal to JS to open and scroll through specific pictures related to project)

--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ Projects / Research
     transform: scale(1.2); /* Rest */
 }
 /* NGC 4921 modal box (fullscreen image pop) */
-#modal {
+#modal1 {
     display: none;
     position: fixed;
     z-index: 1;
