--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ Projects / Research
     transform: scale(1.2); /* Rest */
 }
 /* NGC 4921 modal box (fullscreen image pop) */
-#modal1, #modal2 {
+#modal-1, #modal-2, #modal-3 {
     display: none;
     position: fixed;
     z-index: 1;
@@ -181,7 +181,7 @@ Projects / Research
     background-color: black;
     font-size: 1.5rem;
 }
-.modal-content {
+.modal-content-1, .modal-content-2, .modal-content-3 {
     position: relative;
     background-color: white;
     margin: auto;
