--- a/css/style.css
+++ b/css/style.css
@@ -85,24 +85,6 @@ footer p {
 /* -----
 Wrappers
 ----- */
-.content-wrap {
-    width: 100%;
-    margin: 0 auto;
-    padding: 1%;
-    overflow: hidden;
-}
-/* .flex {
-    display: flex;
-} */
-/* .col-narrow {
-    width: 30%;
-    float: left;
-}
-.col-wide {
-    width: 70%;
-    float: left;
-    padding-left: 3%;
-} */
 /* Text alignment */
 .center {
     text-align: center;
@@ -190,7 +172,7 @@ Projects / Research
     overflow: auto;
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.9);
     font-size: 1.5rem;
 }
 .modal-content-1,
@@ -198,7 +180,9 @@ Projects / Research
 .modal-content-3,
 .modal-content-4 {
     position: relative;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    text-align: center;
     margin: auto;
     padding: 0;
     width: 90%;
