--- a/css/media-500-800.css
+++ b/css/media-500-800.css
@@ -9,25 +9,22 @@ Mobile media (tablets) - 816 - 1100px
         font-size: 20px;
     }
     p {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         letter-spacing: 0.07rem;
         line-height: 1.75rem;
     }
 
     /* Header / Footer */
     footer p {
-        margin: 0.4rem 0;
-        font-size: 1.4rem;
+        margin: 0.75rem 0;
+        font-size: 1.2rem;
         letter-spacing: 0.07rem;
-        /* line-height: 0.8rem; */
+        line-height: 1.5rem;
     }
 
-    /* Images (resize) */
-    #m86 img:first-child {
-        max-height: 900px;
-    }
-    #m86 img:last-child {
-        max-height: 900px;
+    /* Images */
+    #m86 img {
+        max-width: 100%;
     }
 
 }
