--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,8 @@ Projects / Research
 #modal-1,
 #modal-2,
 #modal-3,
-#modal-4 {
+#modal-4,
+#modal-5 {
     display: none;
     position: fixed;
     z-index: 1;
@@ -205,7 +206,8 @@ Projects / Research
 .modal-content-1,
 .modal-content-2,
 .modal-content-3,
-.modal-content-4 {
+.modal-content-4,
+.modal-content-5 {
     position: relative;
     color: white;
     text-align: center;
