Testing another H-alpha transition with D100.

--- a/css/media-500-800.css
+++ b/css/media-500-800.css
@@ -23,7 +23,7 @@ Mobile media (tablets) - 816 - 1100px
     }
 
     /* Images */
-    #m86 img {
+    #m86 img, #d100 img {
         max-width: 100%;
     }
 
