--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,15 @@ nav a {
     position: relative;
     z-index: 0;
     cursor: pointer;
+    border-radius: 10%;
+}
+nav a:hover {
+    background-color:  rgb(65, 137, 219);
+    transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
 }
 /* Border animation */
 
