--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,10 @@ section {
     margin: 5% 0;
 }
 section:nth-of-type(even) {
-    background-color: rgb(220, 220, 220);
+    background: linear-gradient(to right, rgb(235, 235, 235), rgb(255, 255, 255));
 }
 section:last-of-type {
+    padding-bottom: 5%;
     margin-bottom: 0;
 }
 /* Text */
@@ -85,9 +86,13 @@ header {
     transform: translateY(-50%) translateX(-50%);
 }
 footer {
-    margin: 0;
+    padding: 2%;
     background-color:rgb(40, 110, 160);
     color: #FFF;
+}
+footer h3 {
+    margin: 0;
+    padding: 3%;
 }
 footer p {
     margin: 2%;
@@ -108,6 +113,11 @@ Wrappers
     text-align-last: center;
 }
 /* Grids */
+.sources-grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1%;
+}
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
